--- a/css/estilos.css
+++ b/css/estilos.css
@@ -25,7 +25,7 @@ h6 {
 
 .texto-naranja {
     font-weight: 300;
-    color: orange;
+    color: #FFA500;
 }
 
 .texto-blanco {
@@ -36,3 +36,105 @@ h6 {
 .texto-negro {
     color: #000;
 }
+
+/* ------------------------- */
+/* Clases Fullpage.js */
+/* ------------------------- */
+
+#fp-nav ul li a span {
+	background: #FFA500;
+}
+
+#fp-nav ul li .fp-tooltip {
+	color: #FFA500;
+}
+
+/* ------------------------- */
+/* Menu de navegación */
+/* ------------------------- */
+
+.nav {
+	position: fixed;
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	z-index: 70;
+	width: 100%;
+	margin: 0;
+	padding: 10px 20px;
+}
+
+.nav li,
+.nav a {
+	display: inline-block;
+	margin: 10px;
+	text-decoration: none;
+	text-transform: uppercase;
+	font-family: 'Oswald', sans-serif;
+	font-size: 19px;
+	color: #c2c2c2;
+	transition: .5s ease;
+}
+
+.nav li.active {
+	border-bottom: 2px solid #FFA500;
+}
+
+.menu li a {
+	transition: .5s ease;
+	margin: 0;
+	padding: 0;
+}
+
+.menu li.active a {
+	color: #FFA500;
+}
+.menu li.active a,
+.menu li:hover a {
+	color: #FFA500;
+}
+
+/* ------------------------- */
+/* Header */
+/* ------------------------- */
+
+.header {
+	background: url("../images/slider3.jpg");
+	background-position: center;
+}
+
+.header .contenedor-titulo {
+	text-align: center;
+	position: relative;
+	z-index: 99;
+}
+
+.header .titulo {
+	font-size: 70px;
+	text-transform: uppercase;
+}
+
+.header .contenedor-icono {
+	position: absolute;
+	z-index: 99;
+	bottom: 3%;
+	left: 50%;
+	font-size: 40px;
+	animation: bajar-subir 1s ease infinite;
+}
+
+/* ------------------------- */
+/* Animaciones */
+/* ------------------------- */
+
+@keyframes bajar-subir {
+	0% { transform: translateY(20px); }
+	25% { transform: translateY(0px); }
+	100% { transform: translateY(20px); }
+}
+
+
+
