--- a/css/estilos.css
+++ b/css/estilos.css
@@ -157,3 +157,54 @@ h6 {
 .header article:nth-child(3) {
 	background-image: url("../images/slider4.jpg");
 }
+
+/* ------------------------- */
+/* Redes sociales */
+/* ------------------------- */
+
+.contactos .texto-naranja {
+	text-transform: uppercase;
+	font-size: 60px;
+	letter-spacing: 2px;
+	margin-bottom: 40px;
+}
+
+.contactos h2 {
+	opacity: 0;
+	font-family: 'Oswald', sans-serif;
+	transition: .3s ease all;
+}
+
+.contactos .redes-sociales {
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	display: flex;
+	justify-content: center;
+	margin: 0;
+	font-size: 50px;
+}
+.contactos .redes-sociales a {
+	display: flex;
+	width: 100px;
+	height: 100px;
+	background: #fff;
+	color: #30313a;
+	text-decoration: none;
+	align-items: center;
+	justify-content: center;
+	border-radius: 100px;
+	margin: 0 20px;
+}
+
+.contactos .facebook i { color: #3b5998; }
+.contactos .twitter i { color: #1da1f2; }
+.contactos .instagram i { color: #c13584; }
+
+.contactos .facebook:hover { background: #3b5998; }
+.contactos .twitter:hover { background: #1da1f2; }
+.contactos .instagram:hover { background: #c13584; }
+
+.contactos .facebook:hover i { color: #fff; }
+.contactos .twitter:hover i { color: #fff; }
+.contactos .instagram:hover i { color: #fff; }
