--- a/css/estilos.css
+++ b/css/estilos.css
@@ -55,6 +55,9 @@ h6 {
 /* ------------------------- */
 
 .nav {
+/*
+    background: #000000;
+*/
     position: fixed;
     display: -webkit-box;
     display: -webkit-flex;
@@ -77,7 +80,9 @@ h6 {
     font-family: 'Oswald', sans-serif;
     font-size: 19px;
     color: #c2c2c2;
+    /*
     transition: .5s ease;
+*/
 }
 
 .nav li.active {
@@ -168,79 +173,87 @@ h6 {
 }
 
 /* ------------------------- */
-/* Redes sociales */
+/* Contactos */
 /* ------------------------- */
 
-.contactos .texto-naranja {
-    text-transform: uppercase;
-    font-size: 60px;
-    letter-spacing: 2px;
-    margin-bottom: 40px;
+.t-center {
+	text-align: center;
 }
 
-.contactos h2 {
-    opacity: 0;
-    font-family: 'Oswald', sans-serif;
-    transition: .3s ease all;
+.item4-title {
+    margin-top: 100px;
+    color: #f16821;
+    font-size: 35px;
 }
 
-.contactos .redes-sociales {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    justify-content: center;
-    margin: 0;
-    font-size: 50px;
+.mb-1 {
+    display: block;
+    margin-bottom: 4px;
 }
 
-.contactos .redes-sociales a {
-    display: flex;
-    width: 100px;
-    height: 100px;
-    background: #fff;
-    color: #30313a;
+.mb-2 {
+    display: block;
+    margin-bottom: 20px;
+}
+
+.bg-white {
+    background: #FFFFFF;
+}
+
+.p-4 {
+    padding: 48px;
+}
+
+.p-3 {
+    padding: 38px;
+}
+
+.font-weight-1 {
+    font-weight: 300;
+}
+
+.font-weight-2 {
+    font-weight: 700;
+}
+
+.text-orange {
+    color: #f16821;
     text-decoration: none;
-    align-items: center;
-    justify-content: center;
-    border-radius: 100px;
-    margin: 0 20px;
 }
 
-.contactos .facebook i {
-    color: #3b5998;
+.input,
+.textarea {
+    display: block;
+    width: 100%;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    height: 40px;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    margin-bottom: 20px;
 }
 
-.contactos .twitter i {
-    color: #1da1f2;
+.input:focus,
+.textarea:focus {
+    border-color: #E75D15;
 }
 
-.contactos .instagram i {
-    color: #c13584;
-}
-
-.contactos .facebook:hover {
-    background: #3b5998;
-}
-
-.contactos .twitter:hover {
-    background: #1da1f2;
-}
-
-.contactos .instagram:hover {
-    background: #c13584;
-}
-
-.contactos .facebook:hover i {
+.button {
+    display: block;
+    background-color: #f16821;
+    border: 1px solid #f16821;
+    padding: 8px 24px;
     color: #fff;
+    text-transform: uppercase;
+    letter-spacing: .2em;
 }
 
-.contactos .twitter:hover i {
-    color: #fff;
-}
-
-.contactos .instagram:hover i {
-    color: #fff;
+.button:hover {
+    cursor: pointer;
+    background-color: #E75D15;
 }
 
 /* ------------------------- */
@@ -254,21 +267,26 @@ h6 {
         font-size: 18px;
     }
 
-    .contactos h2 {
+    .item4 h2 {
         font-size: 15px;
     }
 
-    .contactos .redes-sociales {
+    .item4 .redes-sociales {
         font-size: 30px;
     }
 
-    .contactos .redes-sociales a {
+    .item4 .redes-sociales a {
         width: 70px;
         height: 70px;
     }
 
-    .contactos .texto-naranja {
+    .item4 .texto-naranja {
         font-size: 40px;
+    }
+
+    .separator {
+        display: block;
+        margin-bottom: 20px;
     }
 
 }
@@ -301,22 +319,26 @@ h6 {
 }
 
 @media screen and (max-width: 490px) {
-	.fp-controlArrow.fp-next {
+    .fp-controlArrow.fp-next {
         left: 100px;
     }
 
     .fp-controlArrow.fp-prev {
         left: 25px;
-	}
+    }
 
-	.contenedor-icono {
-		display: none;
-	}
+    .contenedor-icono {
+        display: none;
+    }
 }
 
 /* ------------------------- */
-/* Estilos de la seccion ¿ Quienes somos ? */
+/* Estilos de la seccion item2 */
 /* ------------------------- */
+
+.mp-4 {
+    margin-top: 80px;
+}
 
 .rounded-circle {
     border-radius: 50%;
