--- a/css/estilos.css
+++ b/css/estilos.css
@@ -323,10 +323,30 @@ h6 {
     }
 }
 
-@media screen and (max-width: 610px) {
-    .menu {
-        display: none;
+@media screen and (max-width: 458px) {
+    .logotipo {
+        display: none !important;
     }
+    .nav {
+        display: block;
+        text-align: center;
+    }
+
+    .nav a {
+        font-size: 16px;
+        margin-bottom: 0;
+    }
+
+    .menu {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .menu li a,
+    .menu li.active a {
+        font-size: 15px;
+        padding: 5px;
+}
 }
 
 @media screen and (max-width: 490px) {
